--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 # 添加子目录，进入Net,Http目录继续构建
 add_subdirectory(Net)
 add_subdirectory(Http)
+add_subdirectory(Timer)
 
 # 链接子目录生成的库到可执行文件
-target_link_libraries(server pthread netlib httplib)
+target_link_libraries(server pthread netlib httplib timerlib)
 
 # 添加头文件搜索路径
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Net)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Http)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Timer)
 
 
