--- a/Net/CMakeLists.txt
+++ b/Net/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCE_FILES
 # 添加头文件路径
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/Http)
+include_directories(${PROJECT_SOURCE_DIR}/Timer)
 
 # 添加库
 add_library(netlib ${SOURCE_FILES})
